# cec-alsa-sync

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: cd.yml  ci.yml
ci/: before_deploy.sh  script.sh
src/: bin.rs  config.rs
