[[bin]]
name = 'cec-alsa-sync'
path = 'src/bin.rs'

[package]
name = 'cec-alsa-sync'
version = "3.0.3"
authors = ['Sami Salonen']
edition = '2018'
license = 'GPL-2.0'
description = 'Utility to synchronize ALSA volume with commands from HDMI CEC'
documentation = 'https://docs.rs/cec-alsa-sync'
readme = 'README.md'
include = ['/README.md', '/LICENSE', '/Cargo.toml', '/Cargo.lock', '/src/*.rs']
keywords = ['libcec', 'cec', 'hdmi', 'alsa']
categories = ['command-line-utilities']
homepage = 'https://github.com/ssalonen/cec-alsa-sync'
repository = 'https://github.com/ssalonen/cec-alsa-sync'

[dependencies]
cec-rs = '6.0.0'
env_logger = '0.9.0'
log = '0.4.11'
arrayvec = '0.7.1'

[badges.travis-ci]
repository = 'ssalonen/cec-alsa-sync'
branch = 'master'

[badges.maintenance]
status = 'passively-maintained'
