[[bin]]
name = 'cec-alsa-sync'
path = 'src/bin.rs'

[package]
name = 'cec-alsa-sync'
version = "5.0.3"
authors = ['Sami Salonen']
edition = '2021'
license = 'GPL-2.0'
description = 'Small command line application to command ALSA volume using CEC via Rasberry Pi HDMI port'
documentation = 'https://docs.rs/cec-alsa-sync'
readme = 'README.md'
include = ['/README.md', '/LICENSE', '/Cargo.toml', '/Cargo.lock', '/src/*.rs']
keywords = ['libcec', 'cec', 'hdmi', 'alsa']
categories = ['command-line-utilities']
homepage = 'https://github.com/ssalonen/cec-alsa-sync'
repository = 'https://github.com/ssalonen/cec-alsa-sync'
publish = false

[dependencies]
cec-rs = '12.0.1'
arrayvec = '0.7.1'
env_logger = '0.11.5'
log = '0.4.11'
once_cell = "1.17.1"
serde = { version = '1.0.118', features = ["derive"] }
toml = "0.8.19"

[badges.travis-ci]
repository = 'ssalonen/cec-alsa-sync'
branch = 'master'

[badges.maintenance]
status = 'passively-maintained'
